--- a/UGA/aboutme.css
+++ b/UGA/aboutme.css
@@ -6,14 +6,15 @@ body {
 
 h1 {
   position: absolute;
-  top: 25px;
+  top: 15px;
   border-bottom: solid #333 2px;
+  font-size: 45px;
   font-family: 'Courier New', Courier, monospace
 }
 
 h2 {
   position: absolute;
-  top: 85px;
+  top: 100px;
 }
 
 ul {
