--- a/UGA/style.css
+++ b/UGA/style.css
@@ -55,11 +55,19 @@ h1 {
   position: absolute;
   top: 25px;
   border-bottom: solid #333 2px;
-  font-family: 'Courier New', Courier, monospace
+  font-family: 'Courier New', Courier, monospace;
 }
 
 h2 {
   position: absolute;
   top: 75px;
-  border: #333 20px;
+  border-bottom: solid #333 2px;
+  font-family: 'Courier New', Courier, monospace;
+}
+h3{
+  position: absolute;
+  top: 100px;
+  border-bottom: solid #333 2px;
+  font-size:x-large;
+  font-family: 'Courier New', Courier, monospace;
 }
