--- a/UGA/aboutme.css
+++ b/UGA/aboutme.css
@@ -58,3 +58,32 @@ li a:hover:not(.active) {
 .active {
   background-color: #04AA6D;
 }
+img{
+  position: absolute;
+  top: 200px;
+}
+#p1{
+  position: absolute;
+  top: 140px;
+  font-size: x-large;
+}
+#p2{
+  position: absolute;
+  top: 185px;
+  font-size: x-large;
+}
+#p3{
+  position: absolute;
+  top: 230px;
+  font-size: x-large;
+}
+#img1{
+  position: absolute;
+  top: 35px;
+  left: 2000px;
+}
+#img2{
+  position: absolute;
+  top: 600px;
+  left: 2000px;
+}
